# dev-bench

./: .gitignore  .gitmodules  CMakeLists.txt  debug-status-desktop.qmlproject  debug-statusq.qmlproject  qml_references.qmlproject  status-desktop.code-workspace  status-go.code-workspace
debug-helpers/: main.cpp  main.qml  stats.md
debug-helpers/DebugStatus/: DebugView.qml  DebugWindow.qml  qmldir
debug-helpers/balance_history/: dbhelpers.py  helpers.py  main.py
debug-helpers/ci/: docker-compose.yml
debug-helpers/db/: balance_history.py  helpers.py  main.py  transactions.py
debug-helpers/dev/: .env  docker-compose.yml
debug-helpers/qml/activity/: TestActivityView.qml
debug-helpers/qml/activity/views/: ActivityView.qml  qmldir
debug-helpers/status-desktop/: TestStatusDesktop.qml
debug-helpers/status-desktop/dummies/: local_account_sensitive_settings.nim.js  utils.nim.qml
debug-helpers/status-desktop/dummies/DotherSide/: StatusSyntaxHighlighter.qml  qmldir
debug-helpers/status-desktop/test-controls/: TestBannerPanel.qml  TestCommunityEditSettingsPanel.qml  TestCommunityOverviewSettingsPanel.qml  TestEditCroppedImagePanel.qml  TestProfileHeader.qml  TestProfilePicture.qml  TestStatusSlider.qml  TestStatusTagSelector.qml  TestStyledText.qml
debug-helpers/status-desktop/test-controls/TestBannerData/: FirstTestImageData.qml  qmldir
debug-helpers/statusq/: TestStatusQ.qml
debug-helpers/statusq/test-controls/: TestStatusImageCropPanel.qml  TestStatusInput.qml
tools/: db.py  dev.py  dev_run.out  requirements.txt
